# udk-sdk

./: .gitignore  CMakeLists.txt  Kconfig  README.md  license.txt  west.yml
app/: CMakeLists.txt  Kconfig  example_selection.h  main.c  prj.conf
app/001_ex_press_buttons/: CMakeLists.txt  press_button.c
app/002_ex_buzzer_alarm/: CMakeLists.txt  buzzer_alarm.c
app/003_ex_led_toggle/: CMakeLists.txt  led_toggle.c
app/004_ex_motor_vibration/: CMakeLists.txt  motor_vibration.c
app/005_ex_hwinterfaces_combination/: CMakeLists.txt  hw_interfaces_combination.c
app/006_ex_uwb/: CMakeLists.txt  custom-sections.ld
app/006_ex_uwb/ex_00a_reading_dev_id/: CMakeLists.txt  read_dev_id.c
app/006_ex_uwb/ex_01a_simple_tx/: CMakeLists.txt  simple_tx.c
app/006_ex_uwb/ex_01b_tx_sleep/: CMakeLists.txt  tx_sleep.c  tx_sleep_idleRC.c
app/006_ex_uwb/ex_01c_tx_sleep_auto/: CMakeLists.txt  tx_sleep_auto.c
app/006_ex_uwb/ex_01d_tx_timed_sleep/: CMakeLists.txt  tx_timed_sleep.c
app/006_ex_uwb/ex_01e_tx_with_cca/: CMakeLists.txt  tx_with_cca.c
app/006_ex_uwb/ex_01g_simple_tx_sts_sdc/: CMakeLists.txt  simple_tx_sts_sdc.c
app/006_ex_uwb/ex_01h_simple_tx_pdoa/: CMakeLists.txt  simple_tx_pdoa.c
app/006_ex_uwb/ex_01i_simple_tx_aes/: CMakeLists.txt  simple_tx_aes.c
app/006_ex_uwb/ex_01j_simple_tx_automotive/: CMakeLists.txt  simple_tx_automotive.c
app/006_ex_uwb/ex_02a_simple_rx/: CMakeLists.txt  simple_rx.c  simple_rx_nlos.c
app/006_ex_uwb/ex_02c_rx_diagnostics/: CMakeLists.txt  rx_diagnostics.c
app/006_ex_uwb/ex_02d_rx_sniff/: CMakeLists.txt  rx_sniff.c
app/006_ex_uwb/ex_02e_rx_dbl_buff/: CMakeLists.txt  double_buffer_rx.c
app/006_ex_uwb/ex_02f_rx_with_crystal_trim/: CMakeLists.txt  rx_with_xtal_trim.c
app/006_ex_uwb/ex_02g_simple_rx_sts_sdc/: CMakeLists.txt  simple_rx_sts_sdc.c
app/006_ex_uwb/ex_02h_simple_rx_pdoa/: CMakeLists.txt  simple_rx_pdoa.c
app/006_ex_uwb/ex_02i_simple_rx_aes/: CMakeLists.txt  simple_rx_aes.c
app/006_ex_uwb/ex_02j_rx_adc_capture/: CMakeLists.txt  rx_adc_capture.c
app/006_ex_uwb/ex_02k_simple_rx_cir/: CMakeLists.txt  simple_rx_cir.c
app/006_ex_uwb/ex_03a_tx_wait_resp/: CMakeLists.txt  tx_wait_resp.c
app/006_ex_uwb/ex_03b_rx_send_resp/: CMakeLists.txt  rx_send_resp.c
app/006_ex_uwb/ex_03d_tx_wait_resp_interrupts/: CMakeLists.txt  tx_wait_resp_int.c
app/006_ex_uwb/ex_04a_cont_wave/: CMakeLists.txt  continuous_wave.c
app/006_ex_uwb/ex_04b_cont_frame/: CMakeLists.txt  continuous_frame.c
app/006_ex_uwb/ex_05a_ds_twr_init/: CMakeLists.txt  ds_twr_initiator.c  ds_twr_initiator_sts.c
app/006_ex_uwb/ex_05b_ds_twr_resp/: CMakeLists.txt  ds_twr_responder.c  ds_twr_responder_sts.c
app/006_ex_uwb/ex_05c_ds_twr_init_sts_sdc/: CMakeLists.txt  ds_twr_sts_sdc_initiator.c
app/006_ex_uwb/ex_05d_ds_twr_resp_sts_sdc/: CMakeLists.txt  ds_twr_sts_sdc_responder.c
app/006_ex_uwb/ex_06a_ss_twr_initiator/: CMakeLists.txt  ss_twr_initiator.c  ss_twr_initiator_sts.c  ss_twr_initiator_sts_no_data.c
app/006_ex_uwb/ex_06b_ss_twr_responder/: CMakeLists.txt  ss_twr_responder.c  ss_twr_responder_sts.c  ss_twr_responder_sts_no_data.c
app/006_ex_uwb/ex_06e_AES_ss_twr_initiator/: CMakeLists.txt  ss_aes_twr_initiator.c
app/006_ex_uwb/ex_06f_AES_ss_twr_responder/: CMakeLists.txt  ss_aes_twr_responder.c
app/006_ex_uwb/ex_07a_ack_data_tx/: CMakeLists.txt  ack_data_tx.c
app/006_ex_uwb/ex_07b_ack_data_rx/: CMakeLists.txt  ack_data_rx.c
app/006_ex_uwb/ex_11a_spi_crc/: CMakeLists.txt  spi_crc.c
app/006_ex_uwb/ex_13a_gpio/: CMakeLists.txt  gpio_example.c
app/006_ex_uwb/ex_14_otp_write/: CMakeLists.txt  otp_write.c
app/006_ex_uwb/ex_15_le_pend/: CMakeLists.txt  le_pend_rx.c  le_pend_tx.c
app/006_ex_uwb/ex_16_pll_cal/: CMakeLists.txt  pll_cal.c
app/006_ex_uwb/ex_17_bw_cal/: CMakeLists.txt  bandwidth_calibration.c
app/006_ex_uwb/ex_18_timer/: CMakeLists.txt  timer_example.c
app/006_ex_uwb/ex_19_tx_power_adjustment/: CMakeLists.txt  tx_power_adjustment_example.c
app/006_ex_uwb/ex_20_simple_aes/: CMakeLists.txt  simple_aes.c
app/006_ex_uwb/ex_21_linear_tx_power/: CMakeLists.txt  linear_tx_power_example.c
app/006_ex_uwb/shared_data/: deca_probe_interface.h  probe_interface.c  shared_defines.h  shared_functions.c
app/007_uwb_ips/: CMakeLists.txt  README.md
app/007_uwb_ips/anchor/: anchor_gateway.c  anchor_main.c  anchor_twr.c  anchor_twr.h
app/007_uwb_ips/common/: battery_mgmt.c  ble_mesh.c  ble_mesh.h  mesh_routing.c  position_calc.c  uwb_config.c  uwb_ips.h  uwb_utils.c
app/007_uwb_ips/tag/: tag_main.c  tag_twr.c  tag_twr.h
app/hal/: hal-console.c  hal-console.h  hal-gpio.c  hal-gpio.h  hal-spi.c  hal-spi.h  hal-timer.h
boards/arm/leaps_lc13/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  leaps_lc13-pinctrl.dtsi  leaps_lc13.dts  leaps_lc13.yaml  leaps_lc13_defconfig  pre_dt_board.cmake
boards/arm/leaps_lc13/support/: openocd.cfg
boards/arm/leaps_lc14/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  leaps_lc14-pinctrl.dtsi  leaps_lc14.dts  leaps_lc14.yaml  leaps_lc14_defconfig  pre_dt_board.cmake
boards/arm/leaps_lc14/support/: openocd.cfg
boards/common/: openocd-leaps.board.cmake
drivers/: CMakeLists.txt
drivers/dwt_uwb_driver/: deca_device_api.h
dts/bindings/gpio/: gpio-generic.yaml
patch/: QM33XX_DW3XXX_RELEASE_PACKAGE_R13_1_LEAPS.patch
zephyr/: module.yml
