# LEAPS - Low Energy Accurate Positioning System.
# 
# Copyright (c) 2025, LEAPS. All rights reserved.
# 
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../hal)
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data)
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/MAC_802_15_8)
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/MAC_802_15_4)
# HAL layer 
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../hal/hal-gpio.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../hal/hal-console.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../hal/hal-spi.c)
# shared file   
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/shared_functions.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/probe_interface.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/config_options.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/MAC_802_15_8/mac_802_15_8.c)
target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/shared_data/MAC_802_15_4/mac_802_15_4.c)
#
# Selecting the example 
if(CONFIG_READING_DEV_ID)
  add_subdirectory(ex_00a_reading_dev_id)
elseif(CONFIG_TEST_SIMPLE_TX)
  add_subdirectory(ex_01a_simple_tx)
elseif(CONFIG_TEST_TX_SLEEP)
  add_subdirectory(ex_01b_tx_sleep)
elseif(CONFIG_TEST_TX_SLEEP_IDLE_RC)
  add_subdirectory(ex_01b_tx_sleep)
elseif(CONFIG_TEST_TX_SLEEP_AUTO)
  add_subdirectory(ex_01c_tx_sleep_auto)
elseif(CONFIG_TEST_TX_SLEEP_TIMED)
  add_subdirectory(ex_01d_tx_timed_sleep)
elseif(CONFIG_TEST_TX_WITH_CCA)
  add_subdirectory(ex_01e_tx_with_cca)
elseif(CONFIG_TEST_SIMPLE_TX_STS_SDC)
  add_subdirectory(ex_01g_simple_tx_sts_sdc) 
elseif(CONFIG_TEST_SIMPLE_TX_PDOA)
  add_subdirectory(ex_01h_simple_tx_pdoa) 
elseif(CONFIG_TEST_SIMPLE_TX_AES)
  add_subdirectory(ex_01i_simple_tx_aes) 
elseif(CONFIG_TEST_SIMPLE_TX_AUTOMOTIVE)
  add_subdirectory(ex_01j_simple_tx_automotive) 
elseif(CONFIG_TEST_SIMPLE_RX_NLOS)
  add_subdirectory(ex_02a_simple_rx) 
elseif(CONFIG_TEST_SIMPLE_RX)
  add_subdirectory(ex_02a_simple_rx) 
elseif(CONFIG_TEST_RX_DIAG)
  add_subdirectory(ex_02c_rx_diagnostics) 
elseif(CONFIG_TEST_RX_SNIFF)
  add_subdirectory(ex_02d_rx_sniff) 
elseif(CONFIG_TEST_DOUBLE_BUFFER_RX)
  add_subdirectory(ex_02e_rx_dbl_buff) 
elseif(CONFIG_TEST_RX_TRIM)
  add_subdirectory(ex_02f_rx_with_crystal_trim) 
elseif(CONFIG_TEST_SIMPLE_RX_STS_SDC)
  add_subdirectory(ex_02g_simple_rx_sts_sdc) 
elseif(CONFIG_TEST_SIMPLE_RX_PDOA)
  add_subdirectory(ex_02h_simple_rx_pdoa) 
elseif(CONFIG_TEST_SIMPLE_RX_AES)
  add_subdirectory(ex_02i_simple_rx_aes) 
elseif(CONFIG_TEST_RX_ADC_CAPTURE)
  add_subdirectory(ex_02j_rx_adc_capture) 
elseif(CONFIG_TEST_SIMPLE_RX_CIR)
  add_subdirectory(ex_02k_simple_rx_cir) 
elseif(CONFIG_TEST_TX_WAIT_RESP)
  add_subdirectory(ex_03a_tx_wait_resp) 
elseif(CONFIG_TEST_RX_SEND_RESP)
  add_subdirectory(ex_03b_rx_send_resp) 
elseif(CONFIG_TEST_TX_WAIT_RESP_INT)
  add_subdirectory(ex_03d_tx_wait_resp_interrupts) 
elseif(CONFIG_TEST_CONTINUOUS_WAVE)
  add_subdirectory(ex_04a_cont_wave) 
elseif(CONFIG_TEST_CONTINUOUS_FRAME)
  add_subdirectory(ex_04b_cont_frame) 
elseif(CONFIG_TEST_DS_TWR_INITIATOR_STS)
  add_subdirectory(ex_05a_ds_twr_init) 
elseif(CONFIG_TEST_DS_TWR_INITIATOR)
  add_subdirectory(ex_05a_ds_twr_init) 
elseif(CONFIG_TEST_DS_TWR_RESPONDER_STS)
  add_subdirectory(ex_05b_ds_twr_resp) 
elseif(CONFIG_TEST_DS_TWR_RESPONDER)
  add_subdirectory(ex_05b_ds_twr_resp) 
elseif(CONFIG_TEST_DS_TWR_STS_SDC_INITIATOR)
  add_subdirectory(ex_05c_ds_twr_init_sts_sdc) 
elseif(CONFIG_TEST_DS_TWR_STS_SDC_RESPONDER)
  add_subdirectory(ex_05d_ds_twr_resp_sts_sdc) 
elseif(CONFIG_TEST_SS_TWR_INITIATOR_STS_NO_DATA)
  add_subdirectory(ex_06a_ss_twr_initiator) 
elseif(CONFIG_TEST_SS_TWR_INITIATOR_STS)
  add_subdirectory(ex_06a_ss_twr_initiator) 
elseif(CONFIG_TEST_SS_TWR_INITIATOR)
  add_subdirectory(ex_06a_ss_twr_initiator) 
elseif(CONFIG_TEST_SS_TWR_RESPONDER_STS_NO_DATA)
  add_subdirectory(ex_06b_ss_twr_responder) 
elseif(CONFIG_TEST_SS_TWR_RESPONDER_STS)
  add_subdirectory(ex_06b_ss_twr_responder) 
elseif(CONFIG_TEST_SS_TWR_RESPONDER)
  add_subdirectory(ex_06b_ss_twr_responder) 
elseif(CONFIG_TEST_AES_SS_TWR_INITIATOR)
  add_subdirectory(ex_06e_AES_ss_twr_initiator) 
elseif(CONFIG_TEST_AES_SS_TWR_RESPONDER)
  add_subdirectory(ex_06f_AES_ss_twr_responder) 
elseif(CONFIG_TEST_ACK_DATA_TX)
  add_subdirectory(ex_07a_ack_data_tx) 
elseif(CONFIG_TEST_ACK_DATA_RX)
  add_subdirectory(ex_07b_ack_data_rx) 
elseif(CONFIG_TEST_SPI_CRC)
  add_subdirectory(ex_11a_spi_crc) 
elseif(CONFIG_TEST_GPIO)
  add_subdirectory(ex_13a_gpio) 
elseif(CONFIG_TEST_GPIO)
  add_subdirectory(ex_13a_gpio) 
elseif(CONFIG_TEST_OTP_WRITE)
  add_subdirectory(ex_14_otp_write) 
elseif(CONFIG_TEST_LE_PEND_RX)
  add_subdirectory(ex_15_le_pend) 
elseif(CONFIG_TEST_LE_PEND_TX)
  add_subdirectory(ex_15_le_pend) 
elseif(CONFIG_TEST_PLL_CAL)
  add_subdirectory(ex_16_pll_cal) 
elseif(CONFIG_TEST_BW_CAL)
  add_subdirectory(ex_17_bw_cal) 
elseif(CONFIG_TEST_TIMER)
  add_subdirectory(ex_18_timer) 
elseif(CONFIG_TEST_TX_POWER_ADJUSTMENT)
  add_subdirectory(ex_19_tx_power_adjustment) 
elseif(CONFIG_TEST_SIMPLE_AES)
  add_subdirectory(ex_20_simple_aes) 
else()  #TEST_LINEAR_TX_POWER
  add_subdirectory(ex_21_linear_tx_power) 
endif()